# cfitall

./: .gitignore  .readthedocs.yaml  .travis.yml  ChangeLog  LICENSE  Makefile  Pipfile  README.md  README.rst  justfile  setup.cfg  stdeb.cfg
.github/workflows/: test.yml
cfitall/: __init__.py  cftypes.py  config.py  manager.py  registry.py  utils.py
cfitall/providers/: __init__.py  base.py  environment.py  filesystem.py
cfitall/tests/: cfitall.yml  test_config.py  test_manager.py  test_provider_environment.py  test_provider_filesystem.py  test_utils.py
cfitall/tests/json/: cfitall.json  cfitall.yml
cfitall/tests/yaml/: cfitall.yml  extra.yaml
docs/: api.rst  conf.py  datastructures.rst  index.rst  manager.rst  providers.rst  registry.rst  requirements.txt
