[metadata]
name = cfitall
author = Chris Haumesser
author-email = chris.haumesser@gmail.com
summary = a configuration manager for python apps
description-file = README.rst
requires-python = >=3.6
home-page = https://github.com/wryfi/cfitall
classifier =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:

[files]
data_files =
    tests = tests/*