[metadata]
name = cfitall
author = Chris Haumesser
author-email = chris.haumesser@gmail.com
summary = a configuration manager for python apps
description-file = README.rst
requires-python = >=3.8
home-page = https://github.com/wryfi/cfitall
classifier =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    PyYAML <= 7

[files]
data_files =
    tests = tests/*
