[metadata]
name = cfitall
author = Chris Haumesser
author_email = chris.haumesser@gmail.com
summary = a configuration manager for python apps
description_file = README.rst
requires_python = >=3.8
home_page = https://github.com/wryfi/cfitall
classifier =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires =
    PyYAML <= 7

[files]
packages = find:
data_files =
    tests = tests/*
